--- a/templates/live/query.html
+++ b/templates/live/query.html
@@ -1,200 +1,106 @@
-{if $smarty.const.USE_DATABASE}{assign var=prefix value='db_'}{else}{assign var=prefix value='fs_'}{/if}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>{$smarty.const.HTML_NAME|@htmlspecialchars}</title>
-<link rel="stylesheet" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}live.css" type="text/css"/>
-<link rel="stylesheet" href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}types.css" type="text/css"/>
-</head>
-
-<body>
-<div id="bodydiv">
-	<div id="sizer">
-		<div id="expander">
-			<table id="header" cellpadding="0" cellspacing="0">
-				<tr>
-					<td id="siteTitle">{$smarty.const.HTML_NAME|@htmlspecialchars}</td>
-					<td><table cellpadding="0" cellspacing="0" id="middleArea"><tr><td class="searchParent">{include file=$templates.TEMPLATE_SEARCH}</td></tr></table></td>
-					<td id="templates">{include file=$templates.TEMPLATE_TEMPLATE}</td>
-				</tr>
-			</table>
-			<div id="container">
-				<table width="100%" cellpadding="5" cellspacing="0">
-					<tr>
-						<td>
-							<div id="breadcrumb">
-								<ul>
-{assign var=dirlen value=$smarty.request.dir|strlen}
-{assign var=dirlen value=$dirlen-1}
-{if $smarty.request.dir|substr:$dirlen:1 eq '/'}{assign var=dir value=$smarty.request.dir|substr:0:$dirlen}{else}{assign var=dir value=$smarty.request.dir}{/if}
-{assign var=crumbs value='/'|split:$dir}
-{assign var=crumbcount value=$crumbs|@count}
-{assign var=crumbcount value=$crumbcount-1}
-{assign var=path value='/'}
-{foreach from=$crumbs item=dir key=i}
-{if $i eq 0}
-									<li><a href="?dir=/&amp;cat={$prefix}file">{$smarty.const.HTML_NAME|@htmlspecialchars}</a></li>
-{else}{assign var=path value=$path|cat:$dir|cat:'/'}
-{/if}
-{if $i eq $crumbcount}{assign var=current value=$dir}
-									<li>{$dir|@htmlspecialchars}</li>
+{include file=$templates.TEMPLATE_HEADER}
+{php}
+$this->assign('newlineregexp', '/([^ ]{25})/i');
+{/php}
+		<div class="contentSpacing">
+			<h1 class="title">{if $current eq ''}{$smarty.const.HTML_NAME|@htmlspecialchars}{else}{$current|@htmlspecialchars}{/if}</h1>
+{assign var=page value=$smarty.request.start|intval}
+{assign var=item_count value=$files|@count}
+			<span class="subText">Use remote access to browse and download files.</span>{if $error eq '' and count($files) > 0}<span class="subText">Displaying items {$smarty.request.start} to {$page+$item_count} out of {$total_count} file(s).</span>{/if}
+{include file=$templates.TEMPLATE_PAGES}
+			<div class="titlePadding"></div>
+			<div class="files">
+{if isset($error) and $error != ''}
+					<span style="color:#C00"><b>{$error}</b></span>
+{elseif count($files) == 0}
+					<b>There are no files to display</b>
 {else}
-									<li><a href="?dir={$path|urlencode|htmlspecialchars}&amp;cat={if $path|@handles:'file'}db_file{else}{$smarty.request.cat}{/if}">{$dir|@htmlspecialchars}</a></li>
-									<li><img src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}images/carat.gif" class="crumbsep"></li>
+{section name=file loop=$files}
+					<div class="file"><div class="selected"></div>
+{assign var=encoded value=$files[file].Filepath|urlencode|htmlspecialchars}
+{if $files[file].Filetype=="FOLDER" || 
+($files[file].Filepath|@handles:'archive' && $smarty.request.cat != $prefix|cat:'archive') || 
+($files[file].Filepath|@handles:'playlist' && $smarty.request.cat != $prefix|cat:'playlist') || 
+($files[file].Filepath|@handles:'diskimage' && $smarty.request.cat != $prefix|cat:'diskimage')
+}
+{if $files[file].Filepath|@handles:'archive'}
+{assign var=cat value=$prefix|cat:archive}
+{elseif $files[file].Filepath|@handles:'diskimage'}
+{assign var=cat value=$prefix|cat:diskimage}
+{elseif $files[file].Filepath|@handles:'playlist'}
+{assign var=cat value=$prefix|cat:playlist}
+{else}
+{assign var=cat value=$smarty.request.cat}
+{/if}
+{assign var=link value='/'|cat:$smarty.const.HTML_ROOT|cat:'?dir='|cat:$encoded|cat:'&amp;cat='|cat:$cat}
+{elseif $files[file].Filepath|@handles:'archive'}{assign var=link value='/'|cat:$smarty.const.HTML_ROOT|cat:$smarty.const.HTML_PLUGINS|cat:'file.php/'|cat:$prefix|cat:'archive/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}
+{elseif $files[file].Filepath|@handles:'diskimage'}{assign var=link value='/'|cat:$smarty.const.HTML_ROOT|cat:$smarty.const.HTML_PLUGINS|cat:'file.php/'|cat:$prefix|cat:'diskimage/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}
+{elseif $files[file].Filepath|@handles:'image_browser'}{assign var=link value='/'|cat:$smarty.const.HTML_ROOT|cat:$smarty.const.HTML_PLUGINS|cat:'file.php/'|cat:$prefix|cat:'image_browser/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}
+{else}{assign var=link value='/'|cat:$smarty.const.HTML_ROOT|cat:$smarty.const.HTML_PLUGINS|cat:'file.php/'|cat:$smarty.request.cat|cat:'/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}{/if}
+						<table class="itemTable" cellpadding="0" cellspacing="0" onclick="location.href = '{$link}';">
+							<tr>
+								<td>
+									<div class="thumb file_ext_{$files[file].Filetype} file_type_{'/'|str_replace:' file_type_':$files[file].Filemime}"><img src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}images/s.gif" height="48" width="48"></div>
+								</td>
+							</tr>
+						</table>
+						<a class="itemLink" href="{$link}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';{literal}if(!loaded){return false;}{/literal} document.getElementById('info_{$files[file].id}').style.display = 'none';document.getElementById('info_{$files[file].id}').style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';{literal}if(!loaded){return false;}{/literal} document.getElementById('info_{$files[file].id}').style.display = '';document.getElementById('info_{$files[file].id}').style.visibility = 'visible';"><span>{if isset($parts)}{$parts|@preg_replace:'<b style="background-color:#990">$0</b>':$files[file].Filename}{else}{$files[file].Filename}{/if}</span></a>
+					</div>
+{/section}
+{/if}
+			</div>
+			<div class="titlePadding"></div>
+{include file=$templates.TEMPLATE_PAGES}
+		</div>
+	</td>
+</tr>
+<tr>
+	<td id="infoBar" style="background-color:{if $audio_count > $image_count && $audio_count > $video_count && $audio_count > $files_count}#900{elseif $image_count > $files_count && $image_count > $video_count && $image_count > $audio_count}#990{elseif $video_count > $files_count && $video_count > $image_count && $video_count > $audio_count}#093{else}#06A{/if}; height:{$biggest+3|max:7}em;">
+{section name=file loop=$files}
+{assign var=info_count value=0}
+{foreach from=$columns item=column_value}
+{if isset($files[file].$column_value) && $files[file].$column_value ne '' && $column_value|substr:-3 ne '_id' && $column_value ne 'id' && $column_value ne 'Hex' && $column_value ne 'Filepath' && $column_value ne 'Filename' && $column_value ne 'Thumbnail' && $column_value ne 'AmazonInfo'}
+{assign var=info_count value=$info_count+1}
 {/if}
 {/foreach}
-								</ul>
-							</div>
-						</td>
-					</tr>
-				</table>
-				<div id="content">
-					<table id="main" cellpadding="0" cellspacing="0">
+{assign var=info_count value=$info_count/2|ceil}
+{if $info_count > $biggest}{assign var=biggest value=$info_count}{/if}
+{assign var=itemvalue value=$files[file].Filename|htmlspecialchars}
+{assign var=itemvalue value=$newlineregexp|@preg_replace:'$1<br />':$itemvalue}
+		<table cellpadding="0" cellspacing="0" border="0" class="fileInfo" id="info_{$files[file].id}" style="display:none; visibility:hidden;">
+			<tr>
+				<td>
+					<table cellpadding="0" cellspacing="0" border="0" class="fileThumb">
 						<tr>
-							<td class="sideColumn"></td>
-							<td id="mainColumn">
-								<table id="mainTable" cellpadding="0" cellspacing="0">
-									<tr>
-										<td>
-											<div class="contentSpacing">
-												<h1 class="title">{if $current eq ''}{$smarty.const.HTML_NAME|@htmlspecialchars}{else}{$current|@htmlspecialchars}{/if}</h1>
-												<span class="subText">Use remote access to browse and download files.</span>
-												{include file=$templates.TEMPLATE_PAGES}
-												<div class="titlePadding"></div>
-												<div class="files">
-													{if isset($error) and $error != ''}
-														<span style="color:#C00"><b>{$error}</b></span>
-													{elseif count($files) == 0}
-														<b>There are no files to display</b>
-													{else}
-													{section name=file loop=$files}
-														<div class="file"><div class="selected"></div>
-															{assign var=encoded value=$files[file].Filepath|urlencode|htmlspecialchars}
-															{if $files[file].Filetype=="FOLDER" || 
-																($files[file].Filepath|@handles:'archive' && $smarty.request.cat != $prefix|cat:'archive') || 
-																($files[file].Filepath|@handles:'playlist' && $smarty.request.cat != $prefix|cat:'playlist') || 
-																($files[file].Filepath|@handles:'diskimage' && $smarty.request.cat != $prefix|cat:'diskimage')
-															}
-																{if $files[file].Filepath|@handles:'archive'}
-																	{assign var=cat value=$prefix|cat:archive}
-																{elseif $files[file].Filepath|@handles:'diskimage'}
-																	{assign var=cat value=$prefix|cat:diskimage}
-																{elseif $files[file].Filepath|@handles:'playlist'}
-																	{assign var=cat value=$prefix|cat:playlist}
-																{else}
-																	{assign var=cat value=$smarty.request.cat}
-																{/if}
-																{assign var=link value='?dir='|cat:$encoded|cat:'&amp;cat='|cat:$cat}
-															{elseif $files[file].Filepath|@handles:'archive'}{assign var=link value='/'|cat:$smarty.const.HTML_ROOT|cat:$smarty.const.HTML_PLUGINS|cat:'file.php/'|cat:$prefix|cat:'archive/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}
-															{elseif $files[file].Filepath|@handles:'diskimage'}{assign var=link value='/'|cat:$smarty.const.HTML_ROOT|cat:$smarty.const.HTML_PLUGINS|cat:'file.php/'|cat:$prefix|cat:'diskimage/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}
-															{elseif $files[file].Filepath|@handles:'image_browser'}{assign var=link value='/'|cat:$smarty.const.HTML_ROOT|cat:$smarty.const.HTML_PLUGINS|cat:'file.php/'|cat:$prefix|cat:'image_browser/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}
-															{else}{assign var=link value='/'|cat:$smarty.const.HTML_ROOT|cat:$smarty.const.HTML_PLUGINS|cat:'file.php/'|cat:$smarty.request.cat|cat:'/'|cat:$files[file].id|cat:'/'|cat:$files[file].Filename}{/if}
-															<table class="itemTable" cellpadding="0" cellspacing="0" onclick="location.href = '{$link}';">
-																<tr>
-																	<td>
-																		<div class="thumb file_ext_{$files[file].Filetype} file_type_{'/'|str_replace:' file_type_':$files[file].Filemime}"><img src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}images/s.gif" height="48" width="48"></div>
-																	</td>
-																</tr>
-															</table>
-															<a class="itemLink" href="{$link}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';document.getElementById('info_{$files[file].id}').style.display = 'none';document.getElementById('info_{$files[file].id}').style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';document.getElementById('info_{$files[file].id}').style.display = '';document.getElementById('info_{$files[file].id}').style.visibility = 'visible';"><span>{$files[file].Filename}</span></a>
-														</div>
-													{/section}
-													{/if}
-												</div>
-												<div class="titlePadding"></div>
-												{include file=$templates.TEMPLATE_PAGES}
-											</div>
-										</td>
-									</tr>
-									<tr>
-										{assign var=biggest value=0}
-										{assign var=image_count value=1}
-										{assign var=video_count value=1}
-										{assign var=audio_count value=1}
-										{assign var=files_count value=1}
-										{section name=file loop=$files}
-											{if $files[file].Filepath|@handles:'audio'}{assign var=audio_count value=$audio_count+1}
-											{elseif $files[file].Filepath|@handles:'video'}{assign var=video_count value=$video_count+1}
-											{elseif $files[file].Filepath|@handles:'image'}{assign var=image_count value=$image_count+1}
-											{else}{assign var=files_count value=$files_count+1}{/if}
-											{assign var=info_count value=0}
-											{foreach from=$columns item=column_value}
-											{if isset($files[file].$column_value) && $files[file].$column_value ne '' && $column_value|substr:-3 ne '_id' && $column_value ne 'id' && $column_value ne 'Hex' && $column_value ne 'Filepath' && $column_value ne 'Filename'}
-											{assign var=info_count value=$info_count+1}
-											{/if}
-											{/foreach}
-											{assign var=info_count value=$info_count/2|ceil}
-											{if $info_count > $biggest}{assign var=biggest value=$info_count}{/if}
-										{/section}
-										<td id="infoBar" style="background-color:{if $audio_count > $image_count && $audio_count > $video_count && $audio_count > $files_count}#900{elseif $image_count > $files_count && $image_count > $video_count && $image_count > $audio_count}#990{elseif $video_count > $files_count && $video_count > $image_count && $video_count > $audio_count}#093{else}#039{/if}; height:{$biggest+2|max:6}em;">
-										{section name=file loop=$files}
-											{assign var=info_count value=0}
-											{foreach from=$columns item=column_value}
-											{if isset($files[file].$column_value) && $files[file].$column_value ne '' && $column_value|substr:-3 ne '_id' && $column_value ne 'id' && $column_value ne 'Hex' && $column_value ne 'Filepath' && $column_value ne 'Filename'}
-											{assign var=info_count value=$info_count+1}
-											{/if}
-											{/foreach}
-											{assign var=info_count value=$info_count/2|ceil}
-											{if $info_count > $biggest}{assign var=biggest value=$info_count}{/if}
-											<table cellpadding="0" cellspacing="0" border="0" class="fileInfo" id="info_{$files[file].id}" style="display:none; visibility:hidden;">
-												<tr>
-													<td>
-														<table cellpadding="0" cellspacing="0" border="0" class="fileThumb">
-															<tr>
-																<td><div class="thumb file_ext_{$files[file].Filetype} file_type_{'/'|str_replace:' file_type_':$files[file].Filemime}"><img src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}images/s.gif" height="48" width="48"></div></td>
-																<td class="infoCell">
-																	<span class="title">{$files[file].Filename|htmlspecialchars}</span><br />
-																	<span>{$files[file].Filetype}</span>
-																</td>
-															</tr>
-														</table>
-													</td>
-													<td>
-													{assign var=count value=0}
-													{foreach from=$columns item=column_value}
-													{if isset($files[file].$column_value) && $files[file].$column_value ne '' && $column_value|substr:-3 ne '_id' && $column_value ne 'id' && $column_value ne 'Hex' && $column_value ne 'Filepath' && $column_value ne 'Filename'}
-														{assign var=count value=$count+1}
-														<span class="label" style="color:{if $audio_count > $image_count && $audio_count > $video_count && $audio_count > $files_count}#F66{elseif $image_count > $files_count && $image_count > $video_count && $image_count > $audio_count}#FFA{elseif $video_count > $files_count && $video_count > $image_count && $video_count > $audio_count}#6FA{else}#6AF{/if};">{$column_value}:</span>{if $column_value eq 'Filesize'}{$files[file].$column_value|roundFileSize}{elseif $column_value eq 'Bitrate'}{$files[file].$column_value/1000|round:1} kbs{elseif $column_value eq 'Length'}{$files[file].$column_value/60|floor} minues {$files[file].$column_value%60|floor} seconds{else}{$files[file].$column_value|utf8_encode|htmlspecialchars}{/if}<br />
-														{if $count eq $info_count && $info_count >= 3}
-													</td>
-													<td>
-														{/if}
-													{/if}
-													{/foreach}
-													</td>
-												</tr>
-											</table>
-										{/section}
-										</td>
-									</tr>
-								</table>
-							</td>
-							<td class="sideColumn" cellpadding="0" cellspacing="0"></td>
-						</tr>
-					</table>
-				</div>
-				<div id="footer">
-					<table id="footerCtr">
-						<tr>
-							<td>
-								<ul>
-								{assign var=mod_count value=0}
-								{assign var=mod_total value=$modules|@count}
-								{assign var=mod_total value=$mod_total-1}
-								{foreach item=name key=module from=$modules}
-									{assign var=name value=' from Database'|@str_replace:'':$name}
-									<li {if $mod_count eq $mod_total}class="last"{/if}><a href="?cat={$module}">{$name}</a></li>
-									{assign var=mod_count value=$mod_count+1}
-								{/foreach}
-								</ul>
+							<td><div class="thumb file_ext_{$files[file].Filetype} file_type_{'/'|str_replace:' file_type_':$files[file].Filemime}"><img src="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}images/s.gif" height="48" width="48"></div></td>
+							<td class="infoCell">
+								<span class="title">{if isset($parts)}{$parts|@preg_replace:'<b style="background-color:#990">$0</b>':$itemvalue}{else}{$itemvalue}{/if}</span><br />
+								<span>{$files[file].Filetype}</span>
 							</td>
 						</tr>
 					</table>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-</body>
-</html>
+				</td>
+				<td>
+{assign var=count value=0}
+{foreach from=$columns item=column_value}
+{assign var=itemvalue value=$files[file].$column_value|htmlspecialchars}
+{if isset($parts)}
+{assign var=itemvalue value=$parts|@preg_replace:'<b style="background-color:#990">$0</b>':$files[file].$column_value}
+{else}
+{assign var=itemvalue value=$files[file].$column_value}
+{/if}
+{if isset($files[file].$column_value) && $files[file].$column_value ne '' && $column_value|substr:-3 ne '_id' && $column_value ne 'id' && $column_value ne 'Hex' && $column_value ne 'Filepath' && $column_value ne 'Filename' && $column_value ne 'Thumbnail' && $column_value ne 'AmazonInfo'}
+{assign var=count value=$count+1}
+					<span class="label" style="color:{if $audio_count > $image_count && $audio_count > $video_count && $audio_count > $files_count}#F66{elseif $image_count > $files_count && $image_count > $video_count && $image_count > $audio_count}#FFA{elseif $video_count > $files_count && $video_count > $image_count && $video_count > $audio_count}#6FA{else}#6CF{/if};">{$column_value}:</span>{if $column_value eq 'Filesize'}{$files[file].$column_value|roundFileSize}{elseif $column_value eq 'Bitrate'}{$files[file].$column_value/1000|round:1} kbs{elseif $column_value eq 'Length'}{$files[file].$column_value/60|floor} minues {$files[file].$column_value%60|floor} seconds{else}{$itemvalue}{/if}<br />
+{if $count eq $info_count && $info_count >= 3}
+				</td>
+				<td>
+{/if}
+{/if}
+{/foreach}
+{if $count < $info_count || $info_count < 3}</td><td>&nbsp;{/if}
+				</td>
+			</tr>
+		</table>
+{/section}<script language="javascript">loaded = true;</script>
+{include file=$templates.TEMPLATE_FOOTER}
