git-svn-id: svn://localhost/Media%20Server@179 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -70,12 +70,14 @@ body {
 	font-weight:bold;
 }
 
+#siteTitle a {
+	color:#FFF;
+	text-decoration:none;
+}
+
 #advancedSearch {
 	font-size:12px;
 	font-weight:normal;
-}
-
-#advancedSearch a {
 	color:#FFF;
 }
 
