--- a/templates/live/header.html
+++ b/templates/live/header.html
@@ -57,8 +57,10 @@ var loaded = false;
 				<div id="content" onmousedown="return false;">
 					<div id="selector" style="display:none;"></div>
 					<ul class="menu" id="menu">
+						<li id="option_download"><a href="#" onmouseout="this.className = '';" onmouseover="this.className = 'itemSelect';"><b>Download File</b></a></li>
+						<li id="option_open"><a href="#" onmouseout="this.className = '';" onmouseover="this.className = 'itemSelect';"><b>Open</b></a></li>
 						<li><a href="#" onmouseout="this.className = '';" onmouseover="this.className = 'itemSelect';">Play Now</a></li>
-						<li><a href="#" onmouseout="this.className = '';" onmouseover="this.className = 'itemSelect';">Download File</a><div class="sep"></div></li>
+						<li><div class="sep"></div></li>
 						<li><a href="#" onmouseout="this.className = '';" onmouseover="this.className = 'itemSelect';">Download Zip</a></li>
 						<li><a href="#" onmouseout="this.className = '';" onmouseover="this.className = 'itemSelect';">Download Torrent</a></li>
 						<li><a href="#" onmouseout="this.className = '';" onmouseover="this.className = 'itemSelect';">Add to Queue</a></li>
