--- a/templates/live/header.html
+++ b/templates/live/header.html
@@ -54,7 +54,7 @@ var loaded = false;
 						</td>
 					</tr>
 				</table>
-				<div id="content" onmousedown="return false;">
+				<div id="content" onmousedown="return selector_off;">
 					<div id="selector" style="display:none;"></div>
 					<ul class="menu" id="menu">
 						<li id="option_download"><a href="#" onmouseout="this.className = '';" onmouseover="this.className = 'itemSelect';"><b>Download File</b></a></li>
