git-svn-id: svn://localhost/Media%20Server@233 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/header.html
+++ b/templates/live/header.html
@@ -6,6 +6,7 @@
 <title>{$smarty.const.HTML_NAME|@htmlspecialchars}</title>
 <link rel="stylesheet" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}live.css" type="text/css"/>
 <link rel="stylesheet" href="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}types.css" type="text/css"/>
+<meta name="google-site-verification" content="K3Em8a7JMI3_1ry5CNVKIHIWofDt-2C3ohovDq3N2cQ" />
 <script language="javascript" type="text/javascript" src="{$smarty.const.HTML_ROOT}{$smarty.const.HTML_TEMPLATE}dragclick.js"></script>
 <script language="javascript">
 var loaded = false;
